# psyAIch

./: .eslintrc.json  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
research/: ai-adoption.html  ethical-ai.html  sweetgreen.html
scripts/: animations.js  main.js  research-interactions.js
styles/: animations.css  main.css  responsive.css
